modified and new file

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -26,3 +26,6 @@
     <script src="{{ script | relative_url }}"></script>
   {% endfor %}
 {% endif %}
+<script src="/assets/js/mermaid.min.js"></script>
+
+
