--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,5 +37,28 @@
 
     {% include scripts.html %}
 
+    { % if page.mermaid % }
+
+<script>
+function initMermaid() {
+  var config = {
+    startOnLoad: true,
+    theme: "forest",
+    flowchart:{
+      useMaxWidth: true,
+      htmlLabels: true
+    }
+  };
+  mermaid.initialize(config);
+  window.mermaid.init(undefined, document.querySelectorAll('.language-mermaid'));
+}
+</script>
+
+<script src="/assets/js/mermaid.min.js"
+  async
+  onload="initMermaid()">
+</script>
+
+{ % endif % }
   </body>
 </html>
